--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,55 @@
 	<%= include header %>
 	<div class="main-articles">
 		<div class="container">
+
 			<div class="row">
+				<div class="col-md-6">
+					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/breakdown/col-pop-break.jpg);">
+						<div class="overcast"></div>
+						<div class="headline">
+							<div class="white banner left">BREAKDOWN:</div>
+							<div class="inner-content">
+								<div class="copy"><a href='/breakdown/percy-harvin-the-biggest-headache-for-seahawk-opponents'>
+									<h3>Percy Harvin: The Biggest Headache For Seahawk Opponents</h3>
+								</a></div>
+								<div class="byline">
+									Brady Poppinga
+									<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
+								</div>
+							</div>
+						</div>
+					</div>	
+				</div>
+				<div class="col-md-6">
+					<a href="/fantasy/week-2-the-wire"><img class="image-links" src="https://s3.amazonaws.com/footballbyfootball-dev/thinktank/col-thinktank.jpg" alt=""></a>
+
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/thinktank/fan-fallout-sept10.jpg);">
+						<div class="overcast"></div>
+						<div class="headline">
+							<div class="white banner left">FANTASY:</div>
+							<div class="inner-content">
+								<div class="copy"><a href="/fantasy/week-1-the-fallout">
+									<h3>Fantasy Week 2 - The Wire</h3>
+								</a></div>
+								<div class="byline">
+									Tank Williams
+									<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_tankwilliams.jpg)"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+
+
+
+
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 9, 2014</p>
 				<% columns.forEach(function(column, index){ %>
 					<% if (index == 0 ) { %>
 						<div class="col-md-6">
