--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
 							<div class="white banner left">FANTASY:</div>
 							<div class="inner-content">
 								<div class="copy"><a href="/fantasy/week-1-the-fallout">
-									<h3>Fantasy Week 2 - The Wire</h3>
+									<h3>Fantasy Week 2 - The Fallout</h3>
 								</a></div>
 								<div class="byline">
 									Tank Williams
