--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -1130,19 +1130,36 @@ img {
 	}
 
 	.column-header {
+		border-bottom: 1px solid #ddd;
 		.title {
 			font-size: 60px;
 			input {
 				border: none;
 				-webkit-appearance: none;
 				outline: none;
-				border-bottom: 1px solid #ddd;
 				width: 100%;
+				border-bottom: 1px solid #ddd;
 			}
 		}
 		.date {
 			color: #999;
+			display: inline-block;
 		}
+	
+		.approved-check {
+			display: inline-block;
+			float: right;
+		}
+
+		.add-main-image {
+			cursor: pointer;
+			opacity: 0.7;
+			transition: 0.15s ease-in-out;
+			&:hover {
+				opacity: 1;
+			}
+		}
+
 		.image-uploader {
 			background: #eee;
 		}
@@ -1271,16 +1288,33 @@ form {
 
 .caption-image {
 	float: right; 
-	width: 375px; 
+	width: 50%; 
 	padding: 15px;
+	img {
+		width: 100%;
+	}
 
 	p {
 		font-size: 0.8em;
 		background: #eee;
 		padding: 5px;
 	}
-
 }
+
+.caption-image.right-aligned {
+	float: right; 
+	width: 50%; 
+}
+
+.caption-image.left-aligned {
+	float: left; 
+}
+
+.caption-image.full-width {
+	float: none; 
+	width: 100%;
+}
+
 
 .image-links {
 	height: 250px;
