--- a/views/breakdown-1.ejs
+++ b/views/breakdown-1.ejs
@@ -69,6 +69,17 @@
 						<p class="item">8 years in NFL</p>
 					</div>
 				</div>
+				<div class="under-author">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- Column-Player Ad -->
+					<ins class="adsbygoogle"
+					     style="display:inline-block;width:300px;height:250px"
+					     data-ad-client="ca-pub-2768251721679098"
+					     data-ad-slot="2559373961"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
 			</div>
 		</div>
 	</div>
