--- a/views/fantasy-1-week-1.ejs
+++ b/views/fantasy-1-week-1.ejs
@@ -2,7 +2,7 @@
 <div class="column">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+			<div class="col-md-8">
 				<div class="column-header">
 					<h2 class="title">Fantasy Week 1</span></h2>
 					<p class="date">September 7, 2014</p>
@@ -50,6 +50,27 @@
 					<p><em>Buccaneers D/ST CAR vs TB</em>
 					 
 					<p>The Bucs play a banged up Cam Newton at home to open the season. The Panthers have a promising rookie lined up at one WR but the other guys on the roster are just that, J.A.G.’s (Just A Guy). I expect Lovie to have his finger prints all over this defense leading to fingerprints all over Cam Newton this week. Cam may eventually turn into Superman this year but I have a feeling he may be rocking the Hello Kitty under the jersey this week.
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="author-badge">
+					<div class="black banner right">Football <span class="by">by</span> Tank Williams</div>
+					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_tankwilliams.jpg)"></div>
+					<div class="content">
+						<p class="item">Defensive Back</p>
+						<p class="item">7 years in NFL</p>
+					</div>
+				</div>
+				<div class="under-author">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- Column-Player Ad -->
+					<ins class="adsbygoogle"
+					     style="display:inline-block;width:300px;height:250px"
+					     data-ad-client="ca-pub-2768251721679098"
+					     data-ad-slot="2559373961"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
 				</div>
 			</div>
 		</div>
