--- a/views/fantasy-2-week-1-the-fallout.ejs
+++ b/views/fantasy-2-week-1-the-fallout.ejs
@@ -2,7 +2,7 @@
 <div class="column">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+			<div class="col-md-8">
 				<div class="column-header">
 					<h2 class="title">Fantasy Week 1 - The Fallout</span></h2>
 					<p class="date">September 10, 2014</p>
@@ -35,6 +35,27 @@
 					<h2>Buccaneers DST</h2>
 
 					<p>Cam Newton was inactive, yet Superman still made an appearance. Well, Derek Anderson’s performance was more Clark Kent yet it was still effective as the Panthers withstood a late rally by the Bucs to win 20-14. What’s my analysis? “Shit happens when you party naked!” As I learned during my playing career and as many have learned over the years of playing fantasy football, sometimes units who’ve received a lot of criticism rise to the occasion and surprise onlookers with their production. That’s the only way I can explain how a no name receiving corps led by a talented rookie and a QB who made his first start since Dec 2010 managed to pull out a Week 1 victory. 
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="author-badge">
+					<div class="black banner right">Football <span class="by">by</span> Tank Williams</div>
+					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_tankwilliams.jpg)"></div>
+					<div class="content">
+						<p class="item">Defensive Back</p>
+						<p class="item">7 years in NFL</p>
+					</div>
+				</div>
+				<div class="under-author">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- Column-Player Ad -->
+					<ins class="adsbygoogle"
+					     style="display:inline-block;width:300px;height:250px"
+					     data-ad-client="ca-pub-2768251721679098"
+					     data-ad-slot="2559373961"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
 				</div>
 			</div>
 		</div>
