--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,37 @@
 	<div class="main-articles">
 		<div class="container">
 
+
 			<div class="row">
+				<div class="col-md-12">
+					<div class="medium-article lockerroom">
+						<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
+						<div class="headline">
+							<div class="inner-content">
+								<div class="copy"><a href="/lockerroom/locker-room-whos-the-best-player-you-ever-played-with"><h3>Locker Room: Who's The Best Player You Ever Played With?</h3></a></div>
+							</div>
+						</div>
+					</div>
+					<div class="locker-authors">
+						<div class="locker-author-wrap">
+							<div class="author-image-wrap">
+								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_jayforeman.jpg)"></div>
+							</div>
+							<div class="author-image-wrap">
+								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_earnestbyner.jpg)"></div>
+							</div>
+							<div class="author-image-wrap">
+								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 10, 2014</p>
 				<div class="col-md-6">
 					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/breakdown/col-pop-break.jpg);">
 						<div class="overcast"></div>
