--- a/views/lr-1-making-it-through-final-roster-cuts.ejs
+++ b/views/lr-1-making-it-through-final-roster-cuts.ejs
@@ -7,6 +7,7 @@
 	</div>
 	<div class="lockerroom-content">
 		<div class="container">
+			<div class="col-md-8">
 
 			<div class="row">
 				<div class="lockerroom-entry">
@@ -113,6 +114,9 @@
 	 
 						<p>I made it!  But I was spending before I even had cash in hand.  Dumb rookie.				</div>
 				</div>
+			</div></div>
+			<div class="col-md-4">
+				<%= include lockerroom-sidebar %>
 			</div>
 		</div>
 	</div>
