--- a/views/lr-2-best-day-one-memory.ejs
+++ b/views/lr-2-best-day-one-memory.ejs
@@ -7,6 +7,7 @@
 	</div>
 	<div class="lockerroom-content">
 		<div class="container">
+			<div class="col-md-8">
 
 			<div class="row">
 				<div class="lockerroom-entry">
@@ -61,26 +62,31 @@
 
 			<div class="row">
 				<div class="lockerroom-entry">
-				<div class="lockerrooom-entry-title">
-					Football <span class="by">by</span> Brady Poppinga
-					<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
-				</div>
+					<div class="lockerrooom-entry-title">
+						Football <span class="by">by</span> Brady Poppinga
+						<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
+					</div>
 
-				<div class="lockerrooom-entry-content cf">
-					<p>The year was 2007.  In ‘06, we finished the year 6-2 with a big-time win against the eventual NFC Champion Chicago Bears. Packer fans were eager to see if this year's team could ride the momentum. 
- 
-					<p>Today was opening day against a very good Philadelphia Eagles team.  Hope was everywhere in Packer Nation. Walking out of the tunnel into the jam-packed Lambeau Field Stadium, you can always smell the BBQ wafting in from the surrounding tailgate festivities.  But today it just smelled better.    
-					 
-					<p>Taking the field, I glanced over to the Eagle’s sideline, catching the eye of my fellow BYU alumnus, Head Coach Andy Reid. We both nodded, but that was it.  In an instant, a battle would ensue.  On this day, pleasantries would be brief.   
-					 
-					<p>Back and forth, both defenses played stellar. With 2 seconds left and the score tied 13-13, our rookie kicker trotted out to attempt a 42 yard field goal for the win. Watching from the sidelines, I thought, What a crazy game! All this buildup and it comes down to the leg of this rookie kicker!?
-					 
-					<p>The snap was high, but the holder got it down and placed so there was no loss of rhythm for the kicker. The kick sailed well to the right of the uprights. But at the last second, like a hooking golf shot, the ball drew back to the middle. Right between the uprights! Packers win!!
-					 
-					<p>The place shook like we’d just won the Super Bowl. Now THAT’s an NFL opener!
-					 
-					<p>And then it hits you.  We’ve still got a ton of games to go…
+					<div class="lockerrooom-entry-content cf">
+						<p>The year was 2007.  In ‘06, we finished the year 6-2 with a big-time win against the eventual NFC Champion Chicago Bears. Packer fans were eager to see if this year's team could ride the momentum. 
+	 
+						<p>Today was opening day against a very good Philadelphia Eagles team.  Hope was everywhere in Packer Nation. Walking out of the tunnel into the jam-packed Lambeau Field Stadium, you can always smell the BBQ wafting in from the surrounding tailgate festivities.  But today it just smelled better.    
+						 
+						<p>Taking the field, I glanced over to the Eagle’s sideline, catching the eye of my fellow BYU alumnus, Head Coach Andy Reid. We both nodded, but that was it.  In an instant, a battle would ensue.  On this day, pleasantries would be brief.   
+						 
+						<p>Back and forth, both defenses played stellar. With 2 seconds left and the score tied 13-13, our rookie kicker trotted out to attempt a 42 yard field goal for the win. Watching from the sidelines, I thought, What a crazy game! All this buildup and it comes down to the leg of this rookie kicker!?
+						 
+						<p>The snap was high, but the holder got it down and placed so there was no loss of rhythm for the kicker. The kick sailed well to the right of the uprights. But at the last second, like a hooking golf shot, the ball drew back to the middle. Right between the uprights! Packers win!!
+						 
+						<p>The place shook like we’d just won the Super Bowl. Now THAT’s an NFL opener!
+						 
+						<p>And then it hits you.  We’ve still got a ton of games to go…
+					</div>
 				</div>
+			</div>
+		</div>
+			<div class="col-md-4">
+				<%= include lockerroom-sidebar %>
 			</div>
 		</div>
 	</div>
