--- a/views/lr-3-what-do-you-make-of-the-new-illegal-contact-emphasis.ejs
+++ b/views/lr-3-what-do-you-make-of-the-new-illegal-contact-emphasis.ejs
@@ -7,6 +7,7 @@
 	</div>
 	<div class="lockerroom-content">
 		<div class="container">
+			<div class="col-md-8">
 
 			<div class="row">
 				<div class="lockerroom-entry">
@@ -86,7 +87,11 @@
 						<p>Because even if it’s 3rd and forever, a five yard illegal contact penalty means an automatic first down.  Advantage:  offense. 
 					</div>
 				</div>
+			</div></div>
+			<div class="col-md-4">
+				<%= include lockerroom-sidebar %>
 			</div>
+		
 		</div>
 	</div>
 
