--- a/views/lr-4-favorite-friday-food-in-the-nfl.ejs
+++ b/views/lr-4-favorite-friday-food-in-the-nfl.ejs
@@ -7,6 +7,7 @@
 	</div>
 	<div class="lockerroom-content">
 		<div class="container">
+			<div class="col-md-8">
 
 			<div class="row">
 				<div class="lockerroom-entry">
@@ -111,7 +112,10 @@
 						<p>The Alpine was such a treat and one of the great NFL traditions! 
 					</div>
 				</div>
-			</div>			
+			</div>			</div>
+			<div class="col-md-4">
+				<%= include lockerroom-sidebar %>
+			</div>
 		</div>
 	</div>
 
