--- a/views/lr-5-locker-room-whos-the-best-player-you-ever-played-with.ejs
+++ b/views/lr-5-locker-room-whos-the-best-player-you-ever-played-with.ejs
@@ -96,7 +96,7 @@
 
 							<p>For whatever it's worth, he has stats...1054 tackles, 14 forced fumbles, 8.5 sacks and 27 interceptions.  He played 14 seasons high-level seasons in the NFL at a speed position, which is impressive in itself.  And throughout those 14 seasons, he had a well-earned reputation as one of the hardest hitting defensive backs in football.  
 
-							<p>Some may call him a jack-of-all-trades, I'll just call him the best FOOTBALL I ever played with.
+							<p>Some may call him a jack-of-all-trades, I'll just call him the best FOOTBALL PLAYER I ever played with.
 							 
 						</div>
 					</div>
