--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -1422,30 +1422,6 @@ a:hover {
   text-decoration: underline;
 }
 
-@media (max-width: 991px) {
-	.author-badge {
-		position: relative;
-		margin-bottom: 25px;
-	}
-	.medium-article.lockerroom {
-		margin-top: 20px;
-	}
-	.lockerroom {
-		.lockerroom-header {
-			height: 300px;
-			background-position: center;
-			background-size: cover;
-			position: relative;
-			.title {
-				color: white;
-				position: absolute;
-				bottom: 20px;
-				font-size: 40px;
-			}
-		}
-	}
-}
-
 .full-width {
 	margin: 30px 0;
 }
@@ -1488,6 +1464,31 @@ a:hover {
 
 }
 
+@media (max-width: 991px) {
+	.author-badge {
+		position: relative;
+		margin-bottom: 25px;
+	}
+	.medium-article.lockerroom {
+		margin-top: 20px;
+	}
+	.lockerroom {
+		.lockerroom-header {
+			height: 300px;
+			background-position: center;
+			background-size: cover;
+			position: relative;
+			.title {
+				color: white;
+				position: absolute;
+				bottom: 20px;
+				font-size: 40px;
+			}
+		}
+	}
+}
+
+
 
 @media (max-width: 480px) {
 	.author-badge {
@@ -1502,6 +1503,13 @@ a:hover {
 		margin-top: 20px;
 	}
 	.lockerroom {
+		.lockerroom-header {
+			height: auto;
+			.title {
+				position: relative;
+				padding-top: 85px;
+			}
+		}
 		.lockerrooom-entry-title {
 			.author-image {
 				float: right;
