--- a/views/lockerroom-sidebar.ejs
+++ b/views/lockerroom-sidebar.ejs
@@ -1,5 +1,5 @@
 <div class="lockerroom-sidebar">
-	<h2 class="lr-sidebar-title">Locker Rooms:</h2>
+	<h2 class="lr-sidebar-title">Locker Rooms</h2>
 	<h5 class="lr-sidebar-link"><a href="/lockerroom/locker-room-whos-the-best-player-you-ever-played-with">Who's The Best Player You Ever Played With?</a></h5>
 	<h5 class="lr-sidebar-link"><a href="/lockerroom/favorite-friday-food-in-the-nfl">Favorite Friday Food in the NFL</a></h5>
 	<h5 class="lr-sidebar-link"><a href="/lockerroom/what-do-you-make-of-the-new-illegal-contact-emphasis">What Do You Make of the New Illegal Contact "Emphasis"?</a></h5>
