--- a/views/actual_column.ejs
+++ b/views/actual_column.ejs
@@ -32,23 +32,25 @@
 				</div>				
 			</div>
 			<div class="col-md-4">
-				<div class="author-badge">
-					<div class="black banner right">Football <span class="by">by</span> <%= column.player.name %></div>
-					<div class="author-square" style="background-image: url(<%= column.player.image_url %>)"></div>
-					<div class="content">
-						<%- column.player.description %>
+				<div class="column-sidebar">
+					<div class="author-badge">
+						<div class="black banner right">Football <span class="by">by</span> <%= column.player.name %></div>
+						<div class="author-square" style="background-image: url(<%= column.player.image_url %>)"></div>
+						<div class="content">
+							<%- column.player.description %>
+						</div>
 					</div>
-				</div>
-				<div class="under-author">
-					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<!-- Column-Player Ad -->
-					<ins class="adsbygoogle"
-					     style="display:inline-block;width:300px;height:250px"
-					     data-ad-client="ca-pub-2768251721679098"
-					     data-ad-slot="2559373961"></ins>
-					<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
+					<div class="under-author">
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- Column-Player Ad -->
+						<ins class="adsbygoogle"
+						     style="display:inline-block;width:300px;height:250px"
+						     data-ad-client="ca-pub-2768251721679098"
+						     data-ad-slot="2559373961"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</div>
 				</div>
 			</div>
 		</div>
