--- a/views/col-5-making-it-to-week-1-in-the-nfl.ejs
+++ b/views/col-5-making-it-to-week-1-in-the-nfl.ejs
@@ -54,6 +54,8 @@
 			</div>
 			<div class="col-md-4">
 				<div class="author-badge">
+					
+				<div class="author-badge">
 					<div class="black banner right">Football <span class="by">by</span> Chris Snee</div>
 					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_chrissnee.jpg)"></div>
 					<div class="content">
@@ -71,6 +73,7 @@
 					<script>
 					(adsbygoogle = window.adsbygoogle || []).push({});
 					</script>
+				</div>
 				</div>
 			</div>
 		</div>
