--- a/views/col-7-how-much-gronk-al-you-can-handle-bud.ejs
+++ b/views/col-7-how-much-gronk-al-you-can-handle-bud.ejs
@@ -67,6 +67,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="author-badge">
+				<div class="author-badge">
 					<div class="black banner right">Football <span class="by">by</span> Matt Chatham</div>
 					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
 					<div class="content">
@@ -86,7 +87,7 @@
 					<script>
 					(adsbygoogle = window.adsbygoogle || []).push({});
 					</script>
-				</div>
+				</div></div>
 			</div>
 		</div>
 	</div>
