--- a/views/col-8-slingin-from-the-pocket.ejs
+++ b/views/col-8-slingin-from-the-pocket.ejs
@@ -80,6 +80,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="author-badge">
+				<div class="author-badge">
 					<div class="black banner right">Football <span class="by">by</span> Sage Rosenfels</div>
 					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
 					<div class="content">
@@ -97,7 +98,7 @@
 					<script>
 					(adsbygoogle = window.adsbygoogle || []).push({});
 					</script>
-				</div>
+				</div></div>
 			</div>
 		</div>
 	</div>
