--- a/views/col-4-start-the-carr-the-case-for-starting-rookie-quarterbacks.ejs
+++ b/views/col-4-start-the-carr-the-case-for-starting-rookie-quarterbacks.ejs
@@ -51,23 +51,25 @@
 			</div>
 			<div class="col-md-4">
 				<div class="author-badge">
-					<div class="black banner right">Football <span class="by">by</span> Brady Quinn</div>
-					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradyquinn.jpg)"></div>
-					<div class="content">
-						<p class="item">Quarterback</p>
-						<p class="item">7 years in NFL</p>
+					<div class="author-badge">
+						<div class="black banner right">Football <span class="by">by</span> Brady Quinn</div>
+						<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradyquinn.jpg)"></div>
+						<div class="content">
+							<p class="item">Quarterback</p>
+							<p class="item">7 years in NFL</p>
+						</div>
 					</div>
-				</div>
-				<div class="under-author">
-					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<!-- Column-Player Ad -->
-					<ins class="adsbygoogle"
-					     style="display:inline-block;width:300px;height:250px"
-					     data-ad-client="ca-pub-2768251721679098"
-					     data-ad-slot="2559373961"></ins>
-					<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
+					<div class="under-author">
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- Column-Player Ad -->
+						<ins class="adsbygoogle"
+						     style="display:inline-block;width:300px;height:250px"
+						     data-ad-client="ca-pub-2768251721679098"
+						     data-ad-slot="2559373961"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</div>
 				</div>
 			</div>
 		</div>
