--- a/views/col-9-from-bad-to-badass.ejs
+++ b/views/col-9-from-bad-to-badass.ejs
@@ -91,6 +91,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="author-badge">
+				<div class="author-badge">
 					<div class="black banner right">Football <span class="by">by</span> Sage Rosenfels</div>
 					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
 					<div class="content">
@@ -108,7 +109,7 @@
 					<script>
 					(adsbygoogle = window.adsbygoogle || []).push({});
 					</script>
-				</div>
+				</div></div>
 			</div>
 		</div>
 	</div>
