--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,28 @@
 
 
 			<div class="row">
-				<div class="col-md-12">
+				<% columns.forEach(function(column, index){ %>
+					<% if (index == 0 ) { %>
+						<div class="col-md-6">
+							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/<%= column.slug %>">
+											<h3><%= column.title %></h3>
+										</a></div>
+										<div class="byline">
+											<%= column.player.name %>
+											<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					<% } %>
+				<% }); %>
+				<div class="col-md-6">
 					<div class="medium-article lockerroom">
 						<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
 						<div class="headline">
@@ -75,7 +96,7 @@
 				<hr class="bottom">
 				<p class="date">September 9, 2014</p>
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 0 ) { %>
+					<% if (index == 1 ) { %>
 						<div class="col-md-6">
 							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
@@ -98,7 +119,7 @@
 
 				<div class="col-md-6">
 					<% columns.forEach(function(column, index){ %>
-						<% if (index == 1 || index == 2 ) { %>
+						<% if (index == 2 || index == 3 ) { %>
 								<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 									<div class="overcast"></div>
 									<div class="headline">
@@ -125,7 +146,7 @@
 				<p class="date">September 8, 2014</p>
 
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 3 ) { %>
+					<% if (index == 4 ) { %>
 
 				<div class="col-md-12">
 					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
@@ -193,13 +214,13 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-6">
-						<a href="/locks/nfl-week-1"><img class="image-links" src="https://s3.amazonaws.com/footballbyfootball-dev/locksoftheweek/col-locks.jpg" alt=""></a>
-					</div>
-					<div class="col-md-6">
-						<a href="/fantasy/week-1"><img class="image-links" src="https://s3.amazonaws.com/footballbyfootball-dev/thinktank/col-thinktank.jpg" alt=""></a>
-					</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<a href="/locks/nfl-week-1"><img class="image-links" src="https://s3.amazonaws.com/footballbyfootball-dev/locksoftheweek/col-locks.jpg" alt=""></a>
+				</div>
+				<div class="col-md-6">
+					<a href="/fantasy/week-1"><img class="image-links" src="https://s3.amazonaws.com/footballbyfootball-dev/thinktank/col-thinktank.jpg" alt=""></a>
 				</div>
 			</div>
 
