--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,34 @@
 
 			<div class="row">
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 0 ) { %>
+					<% if (index == 0 || index == 1  ) { %>
+						<div class="col-md-6">
+							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/<%= column.slug %>">
+											<h3><%= column.title %></h3>
+										</a></div>
+										<div class="byline">
+											<%= column.player.name %>
+											<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					<% } %>
+				<% }); %>
+			</div>
+
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 11, 2014</p>
+				<% columns.forEach(function(column, index){ %>
+					<% if (index == 2 ) { %>
 						<div class="col-md-6">
 							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
@@ -96,7 +123,7 @@
 				<hr class="bottom">
 				<p class="date">September 9, 2014</p>
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 1 ) { %>
+					<% if (index == 3 ) { %>
 						<div class="col-md-6">
 							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
@@ -119,7 +146,7 @@
 
 				<div class="col-md-6">
 					<% columns.forEach(function(column, index){ %>
-						<% if (index == 2 || index == 3 ) { %>
+						<% if (index == 4 || index == 5 ) { %>
 								<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 									<div class="overcast"></div>
 									<div class="headline">
@@ -146,7 +173,7 @@
 				<p class="date">September 8, 2014</p>
 
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 4 ) { %>
+					<% if (index == 5 ) { %>
 
 				<div class="col-md-12">
 					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
