Fixed Column Update Route Fix

--- a/views/lockerroom-editor/new.ejs
+++ b/views/lockerroom-editor/new.ejs
@@ -1,8 +1,13 @@
 <%= include ../header %>	
 
 <script>window.Players = <%- JSON.stringify(players) %>;</script>
-
-<div id='react-content'></div>
+<div class="main-articles">
+	<div class="container">
+		<div class="row">
+			<div id='react-content'></div>
+		</div>
+	</div>
+</div>
 
 <script src='/js/column-editor/lockerroom-editor.compiled.js' ></script>
 
