--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -731,6 +731,12 @@ img {
 	}
 }
 
+.lockerroom.editor {
+	.lockerroom-entry {
+		background: white;
+	}
+}
+
 .lockerroom {
 	.lockerroom-header {
 		height: 600px;
