--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,37 @@
 	<div class="main-articles">
 		<div class="container">
 
-
 			<div class="row">
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 0 || index == 1  ) { %>
-						<div class="col-md-6">
+					<% if (index == 0 ) { %>
+						<div class="col-md-12">
 							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/<%= column.slug %>">
+											<h3><%= column.title %></h3>
+										</a></div>
+										<div class="byline">
+											<%= column.player.name %>
+											<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					<% } %>
+				<% }); %>
+			</div>
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 12, 2014</p>
+				<% columns.forEach(function(column, index){ %>
+					<% if (index == 1 || index == 2  ) { %>
+						<div class="col-md-6">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
@@ -32,9 +57,9 @@
 				<hr class="bottom">
 				<p class="date">September 11, 2014</p>
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 2 ) { %>
+					<% if (index == 3 ) { %>
 						<div class="col-md-6">
-							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
@@ -123,7 +148,7 @@
 				<hr class="bottom">
 				<p class="date">September 9, 2014</p>
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 3 ) { %>
+					<% if (index == 4 ) { %>
 						<div class="col-md-6">
 							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
@@ -146,7 +171,7 @@
 
 				<div class="col-md-6">
 					<% columns.forEach(function(column, index){ %>
-						<% if (index == 4 || index == 5 ) { %>
+						<% if (index == 5 || index == 6 ) { %>
 								<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 									<div class="overcast"></div>
 									<div class="headline">
@@ -173,7 +198,7 @@
 				<p class="date">September 8, 2014</p>
 
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 5 ) { %>
+					<% if (index == 7 ) { %>
 
 				<div class="col-md-12">
 					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
