--- a/views/actual_column.ejs
+++ b/views/actual_column.ejs
@@ -31,6 +31,7 @@
 
 				</div>				
 			</div>
+			<% if (column.slug != 'locks-nfl-week-2') { %>
 			<div class="col-md-4">
 				<div class="column-sidebar">
 					<div class="author-badge">
@@ -53,6 +54,7 @@
 					</div>
 				</div>
 			</div>
+			<% } %>
 		</div>
 	</div>
 </div>
