--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -5,10 +5,22 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Columns</h2>
+				<% var tmp_date = ''; %>
 				<% columns.forEach(function(column){ %>
-			    <div class="thing">
-			    	<a href="/column/<%= column.slug %>"><%= column.title %></a>
-			    </div>
+					<% if (column.updated_at == tmp_date) { %>
+				    <div class="thing">
+				    	<p><a href="/column/<%= column.slug %>"><%= column.title %></a>
+				    	<span style="float:right"><%= column.updated_at %></span></p>
+				    </div>
+				   <% } else { %> 
+				   	<% tmp_date = column.updated_at %>
+				   	<hr class="bottom">
+						<p class="date"><%= tmp_date %></p>
+						<div class="thing">
+				    	<p><a href="/column/<%= column.slug %>"><%= column.title %></a>
+				    	<span style="float:right"><%= column.updated_at %></span></p>
+				    </div>
+				   <% } %>
 			  <% }) %>
 			  <p><a href="/column/new"><span class="fa fa-plus"></span> New Column</a></p>	
 		  </div>
