--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,10 +37,14 @@
 										<div class="copy"><a href="/column/<%= column.slug %>">
 											<h3><%= column.title %></h3>
 										</a></div>
+										
 										<div class="byline">
+											<% if (column.slug != 'locks-nfl-week-2') { %>
 											<%= column.player.name %>
 											<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
+											<% } %>
 										</div>
+										
 									</div>
 								</div>
 							</div>
