--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,37 @@
 
 			<div class="row">
 				
+					
+					<% columns.forEach(function(column, index){ %>
+
+						<% if (index == 0 || index == 1 ) { %>
+						<div class="col-md-6">
+							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/<%= column.slug %>">
+											<h3><%= column.title %></h3>
+										</a></div>
+										<div class="byline">
+											<%= column.player.name %>
+											<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<% } %>
+					<% }); %>
+				</div>
+
+			<div class="row">
+					<hr class="bottom">
+					<p class="date">September 14, 2014</p>
 					<div class="col-md-6">
 						<% columns.forEach(function(column, index){ %>
-						<% if (index == 0 || index == 1 ) { %>
+						<% if (index == 2 || index == 3 ) { %>
 							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
 								<div class="headline">
@@ -28,7 +56,7 @@
 
 						<div class="col-md-6">
 						<% columns.forEach(function(column, index){ %>
-						<% if (index == 2 || index == 3 ) { %>
+						<% if (index == 4 || index == 5 ) { %>
 							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
 								<div class="headline">
@@ -57,7 +85,7 @@
 				<hr class="bottom">
 				<p class="date">September 13, 2014</p>
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 4 ) { %>
+					<% if (index == 6 ) { %>
 						<div class="col-md-12">
 							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
@@ -83,7 +111,7 @@
 				<hr class="bottom">
 				<p class="date">September 12, 2014</p>
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 5 || index == 6  ) { %>
+					<% if (index == 7 || index == 8  ) { %>
 						<div class="col-md-6">
 							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
@@ -110,7 +138,7 @@
 				<hr class="bottom">
 				<p class="date">September 11, 2014</p>
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 7 ) { %>
+					<% if (index == 9 ) { %>
 						<div class="col-md-6">
 							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 								<div class="overcast"></div>
@@ -224,7 +252,7 @@
 
 				<div class="col-md-6">
 					<% columns.forEach(function(column, index){ %>
-						<% if (index == 9 || index == 10 ) { %>
+						<% if (index == 10 || index == 11 ) { %>
 								<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
 									<div class="overcast"></div>
 									<div class="headline">
@@ -251,7 +279,7 @@
 				<p class="date">September 8, 2014</p>
 
 				<% columns.forEach(function(column, index){ %>
-					<% if (index == 11 ) { %>
+					<% if (index == 12 ) { %>
 
 				<div class="col-md-12">
 					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
